force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approval_Date__c</fullName>
    <description>This field is optional and only used in classic Doc Man. It is a date/time stamp that lists the date/time the document in classic Relationship Document Manager was approved.</description>
    <label>approvalDate</label>
    <type>DateTime</type>
</CustomField>