force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and only used in classic Doc Man. It is a lookup to the user who approved this document in classic Relationship Document Manager.</description>
    <label>approvedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>