force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__DocManager__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and is automatically populated. It is a lookup to which Relationship Document Manager the placeholder is located on. It is applicable to both classic Doc Man and Doc Man.</description>
    <label>DocManager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>