force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__DocTab__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocTab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and automatically populated. It is only used in classic Doc Man, but is populated for Document Manager as well. It is a lookup to the Tab under which a classic Doc Man placeholder is located.</description>
    <label>DocTab</label>
    <referenceTo>LLC_BI__DocTab__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>