force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Document_Store_Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Store_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field populates automatically and associates placeholder records and document store records. This is a lookup to the Document Store Index.</description>
    <label>Document Store Index</label>
    <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>