force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Is_Imported__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required but is automatically populated. If true, the document was imported from another DocManager (for example, from Relationship to Loan).</description>
    <label>Is Imported</label>
    <type>Checkbox</type>
</CustomField>