force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Is_Staged__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Staged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not required but is automatically populated. If true, the placeholder is in File Staging.</description>
    <label>Is Staged</label>
    <type>Checkbox</type>
</CustomField>