force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Owner__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Owner__c</fullName>
    <description>This field is optional. It is a picklist with roles associated to those users within nCino who may be responsible for that document placeholder file.</description>
    <label>Owner Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Loan Ops</fullName>
            </value>
            <value>
                <fullName>Special Assets</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Lender/Admin</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>