force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Portal_Doc_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Portal_Doc_Description__c</fullName>
    <description>This field is optional. This is the document description that is displayed to Customer Portal users.</description>
    <label>Portal Doc Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>