force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Portal_Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Portal_Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not currently used.</description>
    <label>Portal Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UploadedDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>