force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Priority__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Priority__c</fullName>
    <description>This field is optional. This picklist shows the priority of a specific placeholder. It can have values such as Critical, High, Medium, Low, or None.</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>