force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/LLC_BI__Trashed_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Trashed_Date__c</fullName>
    <description>This field is optional and auto-populates. This field stores the date and time that a document is trashed.</description>
    <label>Trashed Date</label>
    <type>DateTime</type>
</CustomField>