force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Collateral_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Collateral_Mgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Collateral objects tied to Document Placeholder.</description>
    <inlineHelpText>Facilitate reporting on Collateral objects tied to Document_Placeholder</inlineHelpText>
    <label>Collateral Mgmt</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>