force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Comments__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Comments__c</fullName>
    <description>This field is not currently used in Document Manager.</description>
    <label>comments</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>