force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Deposit__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Deposit objects tied to Document Placeholder.</description>
    <inlineHelpText>Facilitate reporting on Deposit objects tied to Document_Placeholder</inlineHelpText>
    <label>Deposit_Account_Reporting_Helper</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders1</relationshipName>
    <type>Lookup</type>
</CustomField>