force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__HasBeenWaived__c.field-meta.xml
<CustomField>
    <fullName>NDOC__HasBeenWaived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field auto-populates when a placeholder&apos;s status has been changed to waived by the system.</description>
    <label>HasBeenWaived</label>
    <type>Checkbox</type>
</CustomField>