force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Portal_Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Portal_Rejection_Comment__c</fullName>
    <label>Portal Rejection Comment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Portal_Rejection_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>The document you provided is missing a required signature. Please sign this document and upload again.</fullName>
            </value>
            <value>
                <fullName>The document you uploaded is incorrect. Please upload the specified file requested. Thank you.</fullName>
            </value>
            <value>
                <fullName>The document you uploaded cannot be read. Please upload a legible document.</fullName>
            </value>
            <value>
                <fullName>The document you provided is out of date. Please provide a current version of the document.</fullName>
            </value>
            <value>
                <fullName>The document you provided is incomplete. Please fill out the document completely and upload again.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>