force-app/main/default/objects/LLC_BI__Document_Placeholder__c/fields/NDOC__Treasury_Service__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Treasury_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required but is automatically populated. It is used to help facilitate reporting on Treasury Service objects tied to Document Placeholder.</description>
    <inlineHelpText>Facilitate Treasury Service reporting on Document_Placeholder objects</inlineHelpText>
    <label>Treasury_Service_Reporting_Helper</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Document Placeholders</relationshipLabel>
    <relationshipName>Document_Placeholders</relationshipName>
    <type>Lookup</type>
</CustomField>